# OAK-D-Lite_NNbenchmark

./: CMakeLists.txt  README.md  getIDs.py  plotTemps.py  rgb_mobilenet.py  test.py
host_decoding/: README.md  main.cpp  main.py  requirements.txt  test.cpp  test2.cpp
